--- a/bitnami/elasticsearch/templates/ingest-statefulset.yaml
+++ b/bitnami/elasticsearch/templates/ingest-statefulset.yaml
@@ -1,19 +1,32 @@
 {{- if .Values.ingest.enabled }}
-apiVersion: {{ template "deployment.apiVersion" . }}
-kind: Deployment
+apiVersion: {{ template "statefulset.apiVersion" . }}
+kind: StatefulSet
 metadata:
   name: {{ include "elasticsearch.ingest.fullname" . }}
   labels: {{- include "elasticsearch.labels" . | nindent 4 }}
-    role: ingest
+    app.kubernetes.io/component: ingest
+    ## Istio Labels: https://istio.io/docs/ops/deployment/requirements/
+    app: ingest
 spec:
+  updateStrategy:
+    type: {{ .Values.ingest.updateStrategy.type }}
+    {{- if (eq "OnDelete" .Values.ingest.updateStrategy.type) }}
+    rollingUpdate: null
+    {{- else if .Values.ingest.updateStrategy.rollingUpdatePartition }}
+    rollingUpdate:
+      partition: {{ .Values.ingest.updateStrategy.rollingUpdatePartition }}
+    {{- end }}
   selector:
     matchLabels: {{- include "elasticsearch.matchLabels" . | nindent 6 }}
-      role: ingest
+      app.kubernetes.io/component: ingest
   replicas: {{ .Values.ingest.replicas }}
+  serviceName: {{ include "elasticsearch.ingest.fullname" . }}-headless
   template:
     metadata:
       labels: {{- include "elasticsearch.labels" . | nindent 8 }}
-        role: ingest
+        app.kubernetes.io/component: ingest
+        ## Istio Labels: https://istio.io/docs/ops/deployment/requirements/
+        app: ingest
       {{- with .Values.ingest.podAnnotations }}
       annotations: {{- toYaml . | nindent 10 }}
       {{- end }}
@@ -61,7 +74,7 @@ spec:
             - name: ELASTICSEARCH_CLUSTER_NAME
               value: {{ .Values.name | quote }}
             - name: ELASTICSEARCH_CLUSTER_HOSTS
-              value: {{ template "elasticsearch.discovery.fullname" . }}
+              value: {{ include "elasticsearch.hosts" . | quote }}
             {{- if .Values.plugins }}
             - name: ELASTICSEARCH_PLUGINS
               value: {{ .Values.plugins | quote }}
