--- a/bitnami/elasticsearch/templates/ingest-svc.yaml
+++ b/bitnami/elasticsearch/templates/ingest-svc.yaml
@@ -4,7 +4,7 @@ kind: Service
 metadata:
   name: {{ include "elasticsearch.ingest.fullname" . }}
   labels: {{- include "elasticsearch.labels" . | nindent 4 }}
-    role: ingest
+    app.kubernetes.io/component: ingest
   annotations: {{ include "elasticsearch.tplValue" ( dict "value" .Values.ingest.service.annotations "context" $) | nindent 4 }}
 spec:
   type: {{ .Values.ingest.service.type | quote }}
@@ -12,7 +12,7 @@ spec:
   loadBalancerIP: {{ .Values.ingest.service.loadBalancerIP }}
   {{- end }}
   ports:
-    - name: transport
+    - name: tcp-transport
       port: {{ .Values.ingest.service.port }}
       targetPort: transport
       {{- if and (or (eq .Values.ingest.service.type "NodePort") (eq .Values.ingest.service.type "LoadBalancer")) (not (empty .Values.ingest.service.nodePort)) }}
@@ -21,5 +21,5 @@ spec:
       nodePort: null
       {{- end }}
   selector: {{- include "elasticsearch.matchLabels" . | nindent 4 }}
-    role: ingest
+    app.kubernetes.io/component: ingest
 {{- end }}
