--- a/bitnami/elasticsearch/templates/master-svc.yaml
+++ b/bitnami/elasticsearch/templates/master-svc.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ include "elasticsearch.master.fullname" . }}
   labels: {{- include "elasticsearch.labels" . | nindent 4 }}
-    role: master
+    app.kubernetes.io/component: master
   annotations: {{ include "elasticsearch.tplValue" ( dict "value" .Values.master.service.annotations "context" $) | nindent 4 }}
 spec:
   type: {{ .Values.master.service.type | quote }}
@@ -11,7 +11,7 @@ spec:
   loadBalancerIP: {{ .Values.master.service.loadBalancerIP }}
   {{- end }}
   ports:
-    - name: transport
+    - name: tcp-transport
       port: {{ .Values.master.service.port }}
       targetPort: transport
       {{- if and (or (eq .Values.master.service.type "NodePort") (eq .Values.master.service.type "LoadBalancer")) (not (empty .Values.master.service.nodePort)) }}
@@ -20,4 +20,4 @@ spec:
       nodePort: null
       {{- end }}
   selector: {{- include "elasticsearch.matchLabels" . | nindent 4 }}
-    role: master
+    app.kubernetes.io/component: master
