--- a/bitnami/elasticsearch/templates/coordinating-headless-svc.yaml
+++ b/bitnami/elasticsearch/templates/coordinating-headless-svc.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   type: ClusterIP
   clusterIP: None
+  publishNotReadyAddresses: true
   ports:
     - name: http
       port: 9200
