--- a/bitnami/elasticsearch/templates/data-headless-svc.yaml
+++ b/bitnami/elasticsearch/templates/data-headless-svc.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   type: ClusterIP
   clusterIP: None
+  publishNotReadyAddresses: true
   ports:
     - name: tcp-transport
       port: 9300
