--- a/bitnami/elasticsearch/templates/ingest-headless-svc.yaml
+++ b/bitnami/elasticsearch/templates/ingest-headless-svc.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   type: ClusterIP
   clusterIP: None
+  publishNotReadyAddresses: true
   ports:
     - name: tcp-transport
       port: 9300
