Fix master nodes
Signed-off-by: juan131 <juan@bitnami.com>

--- a/bitnami/elasticsearch/templates/master-statefulset.yaml
+++ b/bitnami/elasticsearch/templates/master-statefulset.yaml
@@ -91,6 +91,8 @@ spec:
               value: {{ ternary "true" "false" .Values.image.debug | quote }}
             - name: ELASTICSEARCH_CLUSTER_NAME
               value: {{ .Values.name | quote }}
+            - name: ELASTICSEARCH_CLUSTER_MASTER_HOSTS
+              value: {{ include "elasticsearch.masterHosts" . | quote }}
             - name: ELASTICSEARCH_CLUSTER_HOSTS
               value: {{ include "elasticsearch.hosts" . | quote }}
             - name: ELASTICSEARCH_CLUSTER_MASTER_HOSTS
