--- a/bitnami/elasticsearch/templates/data-statefulset.yaml
+++ b/bitnami/elasticsearch/templates/data-statefulset.yaml
@@ -93,6 +93,8 @@ spec:
               value: {{ ternary "true" "false" .Values.image.debug | quote }}
             - name: ELASTICSEARCH_CLUSTER_NAME
               value: {{ .Values.name | quote }}
+            - name: ELASTICSEARCH_CLUSTER_MASTER_HOSTS
+              value: {{ include "elasticsearch.masterHosts" . | quote }}
             - name: ELASTICSEARCH_CLUSTER_HOSTS
               value: {{ include "elasticsearch.hosts" . | quote }}
             {{- if .Values.plugins }}
