Use parallel management policy for StatefulSets & Allow to publish not ready EndPoint's for not Ready pods
Signed-off-by: juan131 <juan@bitnami.com>

--- a/bitnami/elasticsearch/templates/coordinating-statefulset.yaml
+++ b/bitnami/elasticsearch/templates/coordinating-statefulset.yaml
@@ -18,6 +18,7 @@ spec:
   selector:
     matchLabels: {{- include "elasticsearch.matchLabels" . | nindent 6 }}
       app.kubernetes.io/component: coordinating-only
+  podManagementPolicy: Parallel
   replicas: {{ .Values.coordinating.replicas }}
   serviceName: {{ include "elasticsearch.coordinating.fullname" . }}-headless
   template:
