--- a/bitnami/elasticsearch/templates/master-statefulset.yaml
+++ b/bitnami/elasticsearch/templates/master-statefulset.yaml
@@ -95,10 +95,6 @@ spec:
               value: {{ include "elasticsearch.masterHosts" . | quote }}
             - name: ELASTICSEARCH_CLUSTER_HOSTS
               value: {{ include "elasticsearch.hosts" . | quote }}
-            - name: ELASTICSEARCH_CLUSTER_MASTER_HOSTS
-              {{- $elasticsearchMasterFullname := include "elasticsearch.master.fullname" . }}
-              {{- $replicas := int .Values.master.replicas }}
-              value: {{range $i, $e := until $replicas }}{{ $elasticsearchMasterFullname }}-{{ $e }} {{ end }}
             - name: ELASTICSEARCH_MINIMUM_MASTER_NODES
               value: {{ add (div .Values.master.replicas 2) 1 | quote }}
             {{- if .Values.plugins }}
@@ -112,6 +108,8 @@ spec:
             - name: ELASTICSEARCH_NODE_TYPE
               value: "master"
           ports:
+            - name: http
+              containerPort: 9200
             - name: transport
               containerPort: 9300
           {{- if .Values.master.livenessProbe.enabled }}
