Add port 9200 to manifests
Signed-off-by: Ivan Rizzante <ivan.rizzante@tech.sdb.it>

--- a/bitnami/elasticsearch/templates/data-statefulset.yaml
+++ b/bitnami/elasticsearch/templates/data-statefulset.yaml
@@ -109,6 +109,8 @@ spec:
             - name: ELASTICSEARCH_NODE_TYPE
               value: "data"
           ports:
+            - name: http
+              containerPort: 9200
             - name: transport
               containerPort: 9300
           {{- if .Values.data.livenessProbe.enabled }}
