--- a/bitnami/elasticsearch/templates/master-headless-svc.yaml
+++ b/bitnami/elasticsearch/templates/master-headless-svc.yaml
@@ -9,6 +9,9 @@ spec:
   clusterIP: None
   publishNotReadyAddresses: true
   ports:
+    - name: http
+      port: 9200
+      targetPort: http
     - name: tcp-transport
       port: 9300
       targetPort: transport
